--- a/orders/templates/orders/order.html
+++ b/orders/templates/orders/order.html
@@ -1,6 +1,4 @@
 {% extends 'products/base.html' %}
-
-
 {% block content %}
     <section>
         <div class="container pt-5">
@@ -29,7 +27,7 @@
                         {% endfor %}
                         </tbody>
                     </table>
-                    <p class="float-right h4 mt-3">Итого {{ object.basket_history.total_sum }} руб.</p>
+                    <p class="float-right h4 mt-3">Итого {{ object.basket_history.total_suma }} руб.</p>
                 </div>
             </div>
         </div>
