--- a/main/templates/socialaccount/login.html
+++ b/main/templates/socialaccount/login.html
@@ -1,22 +1,30 @@
 {% extends "products/base.html" %}
 {% block content %}
 {% load i18n %}
-<div class="main"
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="billing-details1">
-                    {% if process == "connect" %}
-                    <h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
+    <div class="main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="billing-details1">
+                        {% if process == "connect" %}
+                            <h1>{% blocktrans with provider.name as provider %}Connect
+                                {{ provider }}{% endblocktrans %}</h1>
 
-                    <p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
-                    {% else %}
-                    <h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
-                    <p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
-                    {% endif %}
-                    <form method="post">
-                      {% csrf_token %}
-                      <button type="submit" class="primary-btn cta-btn">{% trans "Continue" %}</button>
-                    </form>
-                </div></div></div></div></div>
+                            <p>{% blocktrans with provider.name as provider %}You are about to connect a new third party
+                                account from {{ provider }}.{% endblocktrans %}</p>
+                        {% else %}
+                            <h1>{% blocktrans with provider.name as provider %}Sign In Via
+                                {{ provider }}{% endblocktrans %}</h1>
+                            <p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party
+                                account from {{ provider }}.{% endblocktrans %}</p>
+                        {% endif %}
+                        <form method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="primary-btn cta-btn">{% trans "Continue" %}</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
