--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -1,7 +1,7 @@
 {% extends 'products/base.html' %}
 {% load static %}
 {% block content %}
-    <!-- SECTION -->
+    <title>{{ product.name }}</title>
     <div class="section">
         <!-- container -->
         <div class="container">
@@ -94,14 +94,16 @@
                                         <span class="qty-down">-</span>
                                     </div>
                                 </div>
-                                <button class="add-to-cart-btn" >
+                                <button class="add-to-cart-btn">
                                     <i class="fa fa-shopping-cart"></i>Добавить
                                 </button>
                             </div>
 
                             <ul class="product-links">
                                 <li>Категория:</li>
-                                <li><a href="{% url 'products:index' %}?Category={{ product.category.id }}">{{ product.category }}</a></li>
+                                <li>
+                                    <a href="{% url 'products:index' product.category.id %}">{{ product.category }}</a>
+                                </li>
 
                             </ul>
                         </form>
@@ -114,8 +116,8 @@
                     <div id="product-tab">
                         <!-- product tab nav -->
                         <ul class="tab-nav">
-                            <p><a name="top"></a></p>
-                            <li class="active"><a data-toggle="tab" href="#tab1">Описание</a></li>
+                            <a name="top"></a>
+                            <li class="active"><a data-toggle="tab" href="#">Описание</a></li>
                         </ul>
                         <!-- /product tab nav -->
 
@@ -136,7 +138,7 @@
 
                         <!-- /tab1  -->
                         <ul class="tab-nav">
-                            <li><a data-toggle="tab" href="#tab3">Отзывы</a></li>
+                            <li><a data-toggle="tab" href="#">Отзывы</a></li>
                         </ul>
                         <!-- tab3  -->
                         <div class="row">
@@ -157,17 +159,17 @@
                                             <li>
                                                 <div class="review-heading">
                                                     <h5 class="name">{{ review.user }}</h5>
-                                                    <p class="date">{{ review.created_timestamp}}</p>
+                                                    <p class="date">{{ review.created_timestamp }}</p>
                                                     <div class="review-rating">
-                                                            Оценка товара: {{ review.stars }}
+                                                        Оценка товара: {{ review.stars }}
                                                     </div>
                                                 </div>
                                                 <div class="review-body">
                                                     <p>{{ review.review }}</p>
                                                 </div>
                                                 {% if review.user == user %}
-                                                    <a href="{% url 'products:review_del'  review.id  %}">
-                                                    Удалить отзыв</a>
+                                                    <a href="{% url 'products:review_del'  review.id %}">
+                                                        Удалить отзыв</a>
                                                 {% endif %}
                                             </li>
                                         {% endfor %}
@@ -178,19 +180,22 @@
                             <!-- Review Form -->
                             <div class="col-md-3">
                                 <div id="review-form">
-                                    <form class="review-form" action="{% url 'products:review_add'  product.id  %}" method="POST">
+                                    <form class="review-form" action="{% url 'products:review_add'  product.id %}"
+                                          method="POST">
                                         <span>Оставить отзыв:</span>
                                         {% if user.is_authenticated %}
-                                        {% csrf_token %}
-                                        {{ form.review }}
-                                        <span>Ваша оценка: </span>
-                                        {{ form.stars }}
-                                        <button class="primary-btn" >Оставить отзыв</button>
+                                            {% csrf_token %}
+                                            {{ form.review }}
+                                            <span>Ваша оценка: </span>
+                                            {{ form.stars }}
+                                            <button class="primary-btn">Оставить отзыв</button>
                                         {% else %}
-                                        <p> </p>
-                                        Для добавления нового отзыва вам необходимо <a href="{%  url 'users:registration' %}">
-                                            <strong>зарегестрироваться</strong></a> или <a href="{%  url 'users:login' %}">
-                                            <strong>войти</strong></a>
+                                            <p></p>
+                                            Для добавления нового отзыва вам необходимо
+                                            <a href="{% url 'users:registration' %}">
+                                                <strong>зарегестрироваться</strong></a> или
+                                            <a href="{% url 'users:login' %}">
+                                                <strong>войти</strong></a>
                                         {% endif %}
                                     </form>
 
@@ -208,9 +213,4 @@
         </div>
         <!-- /row -->
     </div>
-    <!-- /container -->
-    </div>
-    <!-- /SECTION -->
-
-
 {% endblock %}
