--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2154,7 +2154,7 @@ textarea.input {
 }
 
 .limited {
-    max-height: 170px;
+    max-height: 280px;
     overflow: hidden;
     position: relative;
 }
@@ -2171,16 +2171,20 @@ textarea.input {
 .read-more-checker {
     opacity: 0;
     position: absolute;
+    color: #1E1F29;
 }
 .read-more-checker:checked ~ .limited {
     max-height: none;
+    color: #1E1F29;
 }
 .read-more-checker:checked ~ .limited .bottom {
     opacity: 0;
     transition: .3s;
+
 }
 .read-more-checker ~ .read-more-button:before {
     content: 'Показать все';
+    color: #1E1F29;
 }
 .read-more-checker:checked ~ .read-more-button:before {
     content: 'Скрыть';
@@ -2189,9 +2193,10 @@ textarea.input {
     cursor: pointer;
     display: inline-block;
     padding: 10px;
-    color: #777;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+
+
+    color: #1E1F29;
+
 }
 /*=========================================================
 	12 -> SLICK STYLE
