--- a/products/templates/products/categories.html
+++ b/products/templates/products/categories.html
@@ -18,7 +18,7 @@
                                         <div class="product-body">
                                             <div class="items-text1">
                                                 <h3 class="product-name"><a
-                                                        href="{% url 'products:index' category.id %}">
+                                                        href="{% url 'products:index' category.id %}?order=discount">
                                                     {{ category.name }}</a></h3>
                                             </div>
                                         </div>
